--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,7 +49,7 @@
 
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
-            android:value="SAMPLE_APP_ID"/>
+            android:value="@string/SAMPLE_APP_ID"/>
     </application>
 
 </manifest>
